--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-657.9KB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-529.0KB/s(Youtube:不良林), server: 169.197.142.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 134.195.196.231, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇬🇧 英国-1.20MB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇨🇦 加拿大-448.1KB/s(Youtube:不良林), server: 134.195.196.231, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-179.9KB/s(Youtube:不良林), server: 213.183.51.171, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇨🇦 加拿大-482.4KB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇨🇦 加拿大-977.5KB/s(Youtube:不良林), server: 134.195.196.231, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 134.195.196.231, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 134.195.196.231, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 134.195.196.231, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
