--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-448.1KB/s(Youtube:不良林), server: 134.195.196.231, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-179.9KB/s(Youtube:不良林), server: 213.183.51.171, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇨🇦 加拿大-482.4KB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇨🇦 加拿大-977.5KB/s(Youtube:不良林), server: 134.195.196.231, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 134.195.196.231, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 134.195.196.231, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 134.195.196.231, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-890.5KB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇷🇺 俄罗斯联邦-224.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇨🇦 加拿大-1.46MB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇦🇺 澳大利亚-706.1KB/s(Youtube:不良林), server: 185.167.116.253, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇬🇧 英国-162.6KB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇨🇦 加拿大-1.69MB/s(Youtube:不良林), server: 134.195.196.231, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇦🇺 澳大利亚-936.0KB/s(Youtube:不良林), server: 185.167.116.253, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇦🇺 澳大利亚-759.6KB/s(Youtube:不良林), server: 185.167.116.253, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇦🇺 澳大利亚-551.2KB/s(Youtube:不良林), server: 185.167.116.253, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林), server: 185.167.116.253, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇨🇳 中国-873.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-224.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-706.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-162.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-936.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-759.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-551.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-224.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-706.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-162.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-936.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-759.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-551.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-224.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-706.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-162.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-936.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-759.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-551.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-224.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-706.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-162.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-936.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-759.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-551.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-224.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-706.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-162.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-936.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-759.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-551.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-224.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-706.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-162.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-936.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-759.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-551.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-448.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-179.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-221.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-977.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-224.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-706.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-162.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-936.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-759.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-551.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
